@@ -9,7 +9,7 @@ $Env:path+="`;$blasPath\bin" # libblas.dll
 $Env:path+="`;$mingwBinPath" # mingw runtime dlls
 
 java `
+  -cp classes `
   --enable-native-access=ALL-UNNAMED `
-  --enable-preview --source=22 `
   -D"java.library.path=$blasPath\bin" `
   TestBlas.java `
