@@ -1,3 +1,3 @@
-java --enable-native-access=ALL-UNNAMED --enable-preview --source=22 \
+java --enable-native-access=ALL-UNNAMED \
     -Djava.library.path=/usr/local/opt/lapack/lib \
     TestLapack.java
