@@ -1,4 +1,4 @@
-jextract --source -t org.jextract -lcurl \
+jextract --output src -t org.jextract -lcurl \
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/curl/curl.h
 
-javac --enable-preview --source=22 org/jextract/*.java
+javac --source=22 -d . src/org/jextract/*.java
