@@ -1,7 +1,7 @@
-jextract --source -t libzstd \
+jextract --output src -t libzstd \
   -I /usr/local/Cellar/zstd/1.5.5/include \
   -l zstd \
   --header-class-name Libzstd \
   /usr/local/Cellar/zstd/1.5.5/include/zstd.h
 
-javac --enable-preview --source=22 libzstd/*.java
+javac --source=22 -d . src/libzstd/*.java
