@@ -2,9 +2,9 @@
 # brew install lp_solve
  
 jextract \
-  --source \
+  --output src \
   -t net.sourceforge.lpsolve \
   -l lpsolve55 \
   /usr/local/Cellar/lp_solve/5.5.2.11/include/lp_lib.h
 
-javac --enable-preview --source=22 net/sourceforge/lpsolve/*.java
+javac --source=22 -d . src/net/sourceforge/lpsolve/*.java
