@@ -1,4 +1,4 @@
-jextract --source -l tcl -t org.tcl \
+jextract --output src -l tcl -t org.tcl \
    /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/tcl.h
 
-javac --enable-preview --source=22 org/tcl/*.java
+javac --source=22 -d . src/org/tcl/*.java
